2004-09-03 08:48  PeterB

	* src/balsa-message.c: leave vertical scrollbar in place while html
	widget is displayed.

2004-09-02  Pawel Salek

	Handle parts' content-id for imap mailboxes.
	* libbalsa/body.[hc]: add content-id field and use it.
	* libbalsa/mailbox_imap.c: set it.
	* libbalsa/imap/imap-handle.c: store received content id.
	* libbalsa/imap/libimap.h: ... in ImapBody field.
	* src/balsa-index.c: gtk-2.4.9 has FIXED_HEIGHT bugs fixed. Uff.

2004-09-02 05:15  PeterB

	* src/: balsa-message.c, balsa-message.h: leave room for vertical
	scrollbar when rendering html widget.

2004-09-01 08:35  PeterB

	* src/save-restore.c: change only hide-deleted bit in GUI filter.
	* src/: balsa-app.h, balsa-index.c, pref-manager.c, save-restore.c:
	drop balsa_app.hide_deleted; add_pref_menu and attach_pref_menu
	always use the same callback; implement default sort-field; update
	current views when the default is changed; use
	pm_page_add_to_size_group to align widgets.

2004-08-31 20:07  PeterB

	* src/message-window.c: check message->mailbox.
	* src/main-window.c: notify user about failure in balsa_message_set
	instead of here.
	* src/balsa-message.c: check mailbox when body-ref fails and before
	selecting a new part, and notify user.
	* src/balsa-index.c: check whether message has lost its mailbox.

2004-08-31 20:07  PeterB

	* libbalsa/mailbox.h: change fetch_message_structure api to return
	a gboolean success indicator.
	* libbalsa/: message.c, message.h: ditto; new name and api for
	libbalsa_message_load_envelope.
	* libbalsa/mailbox_mh.c: ditto; check for removed files; use new
	* api for libbalsa_message_load_envelope and ignore
	load_envelope errors.
	* libbalsa/mailbox_mbox.c: ditto; less draconian resync when
	mailbox is changed behind our back.
	* libbalsa/mailbox_maildir.c: ditto; drop msg_info->msgno; check
	for removed files; reorganize sync; use new api for
	libbalsa_message_load_envelope.
	* libbalsa/: mailbox_local.c, mailbox_local.h: ditto; rename